[FIX] estate: standard price required by nursery seed delivery order

--- a/estate/views/estate_activity_view.xml
+++ b/estate/views/estate_activity_view.xml
@@ -14,6 +14,7 @@
                     </group>
                     <group>
                         <group name="detail" string="Detail">
+                            <field name="standard_price"/>
                             <field name="code"/>
                             <field name="type"/>
                         </group>
