--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -19,7 +19,7 @@
                 <tree string="Request planting View"
                       colors="red:state=='draft';red:state=='confirmed';green:state=='done'">
                     <field name="planting_code" string="Request No" />
-                    <field name="variety_id" string="Variety"/>
+                    <field name="seed_location_id" string="Destination Location"/>
                     <field name="total_qty_pokok" string="Total Quantity"/>
                     <field name="state" string="Status" invisible="0"/>
                 </tree>
@@ -63,7 +63,6 @@
                                 states="validate2"
                                 groups="estate.group_manager"/>
 
-                        <button name="%(launch_seddo_wizard)d" type="action" string="Transfer"/>
 
                         <field name="state" widget="statusbar"
                                statusbar_visible="draft,confirmed,validate1,validate2,done"
@@ -85,12 +84,10 @@
                                 <field name="seed_location_id"
                                        string="Seed to  Location" required="True" options="{'no_create_edit': True}"/>
                                 <field name="date_request"/>
-                                <field name="lot_id" options="{'no_create_edit': True}"/>
                             </group>
 
                             <group coolspan="10">
-                                <field name="variety_id" string="Variety" options="{'no_create_edit': True}"/>
-                                <field name="total_qty_pokok" readonly="1"/>
+                                <field name="total_qty_pokok" string="Total Quantity Seed"/>
                             </group>
                         </group>
                         <group>
@@ -114,13 +111,10 @@
                                         </group>
                                     </page>
                                 <page string="Tranportir Activity Information">
-                                    <group>
                                         <field name="activityline_ids" attrs="{
                                         'required' : [('state', '=', 'confirmed')],
-                                        'readonly' : [('state', '=', 'done')],
-                                        'invisible' : ['|',('state', '=', 'draft')]}"
+                                        'readonly' : [('state', '=', 'done')]}"
                                                 context="{'tree_view_ref' : 'estate_nursery.view_tree_activityline'}"/>
-                                    </group>
                                     <group class="oe_subtotal_footer oe_right">
                                         <field name="expense" widget="monetary" readonly="1"
                                                options="{'currency_field': 'currency_id'}"/>
@@ -155,10 +149,12 @@
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
                 <tree editable="True">
-                    <field name="bpb_many2many" widget="many2many_tags" options="{'no_create_edit': True}"/>
+                    <field name="bpb_id" options="{'no_create_edit': True}"/>
+                    <field name="variety_id" string="Variety"
+                           options="{'no_create_edit': True}">{‘readonly_by_pass’: True}</field>
                     <field name="total_qty_pokok"/>
                     <field name="from_location_id"  widget="many2many_tags" options="{'no_create_edit': True}"/>
-                    <field name="batch_id" widget="many2many_tags" options="{'no_create_edit': True}"/>
+                    <field name="batch_id" options="{'no_create_edit': True}"/>
                 </tree>
             </field>
         </record>
