--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -63,6 +63,8 @@
                                 states="validate2"
                                 groups="estate.group_manager"/>
 
+                        <button name="do_enter_transfer_details" states="assigned,partially_available"
+                                string="Transfer" groups="stock.group_stock_user" type="object" class="oe_highlight"/>
 
                         <field name="state" widget="statusbar"
                                statusbar_visible="draft,confirmed,validate1,validate2,done"
@@ -152,7 +154,7 @@
                     <field name="bpb_id" options="{'no_create_edit': True}"/>
                     <field name="variety_id" string="Variety"
                            options="{'no_create_edit': True}">{‘readonly_by_pass’: True}</field>
-                    <field name="total_qty_pokok"/>
+                    <field name="total_qty_pokok">{‘readonly_by_pass’: True}</field>
                     <field name="from_location_id"  widget="many2many_tags" options="{'no_create_edit': True}"/>
                     <field name="batch_id" options="{'no_create_edit': True}"/>
                 </tree>
@@ -167,7 +169,7 @@
                     <field name="activity_id" string="Activity" />
                     <field name="product_type_id" string="Product UoM" />
                     <field name="qty_product" string="Quantity" />
-                    <field name="price" string="Price/product" required="1"/>
+                    <field name="price" string="Price/product" required="1">{‘readonly_by_pass’: True}</field>
                     <field name="transportactivity_expense_id"/>
                     <field name="result_price" string="Total Price" readonly="1"/>
                 </tree>
@@ -271,15 +273,15 @@
                         <group>
                             <group>
                                 <field name="kebun_location_id" attrs="{'required': [('state','!=','draft')],
-                                 'readonly': [('state','=','done')]}" />
+                                 'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
+
                                 <field name="divisi_location_id" attrs="{'required': [('state','!=','draft')],
-                                 'readonly': [('state','=','done')]}" />
-                                <!--<field name="partner_id" string="supplier"/>-->
+                                 'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                             </group>
 
                             <group coolspan="10">
                                 <field name="variety_id" attrs="{'required': [('state','!=','draft')],
-                                 'readonly': [('state','=','done')]}"/>
+                                 'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                                 <field name="total_qty_pokok" readonly="1"/>
                                 <field name="date_request" string="BPB Date Request" required="1"/>
                             </group>
@@ -311,8 +313,8 @@
             <field name="name">Requestline Planting</field>
             <field name="model">estate.nursery.requestline</field>
             <field name="arch" type="xml">
-                <tree string="Request line View" colors="red:qty_request" editable="top">
-                    <field name="inherit_location_id" string="Blok" />
+                <tree string="Request line View" colors="red:qty_request" editable="bottom">
+                    <field name="inherit_location_id" string="Blok" options="{'no_create_edit': True}" />
                     <field name="Luas" string="Luas(Ha)"/>
                     <field name="qty_request" string="&#931; Quantity Request ." sum="Qty"/>
                     <field name="comment"/>
