--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -9,7 +9,7 @@
                 <tree string="Request planting View"
                       colors="red:state=='draft';red:state=='confirmed';green:state=='done'">
                     <field name="planting_code" string="Request No" />
-                    <field name="seed_location_id" string="Destination Location"/>
+                    <field name="date_request" string="Date Request"/>
                     <field name="total_qty_pokok" string="Total Quantity"/>
                     <field name="state" string="Status" invisible="0"/>
                 </tree>
@@ -73,8 +73,6 @@
                         <group>
 
                             <group>
-                                <field name="seed_location_id"
-                                       string="Seed to  Location" required="True" options="{'no_create_edit': True}"/>
                                 <field name="date_request"/>
                             </group>
 
