--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -388,6 +388,7 @@
             <field name="arch" type="xml">
                 <tree string="Seed Selection Line" colors="red:qty" editable="bottom">
                     <field name="cause_id" options="{'no_create_edit': True}" />
+                    <field name="stage_a_id" invisible="1"/>
                     <field name="qty" string="&#931; Quantity Abnormal ." sum="Qty"/>
                     <field name="location_id" options="{'no_create_edit': True}"/>
                     <field name="comment" string="Add Description/Comment"/>
@@ -405,6 +406,7 @@
                             <group>
                                 <field name="cause_id" />
                                 <field name="qty_batch"/>
+                                <field name="stage_a_id"/>
                                 <field name="qty" string="&#931; Quantity Abnormal ." sum="Qty" />
                             </group>
                             <group coolspan="10">
