--- a/estate_vehicle/views/estate_nursery_vehicle.xml
+++ b/estate_vehicle/views/estate_nursery_vehicle.xml
@@ -11,6 +11,9 @@
                         <field name="no_vehicle"/>
                         <field name="vehicle_type"/>
                     </group>
+                    <group string="Internal Driver" attrs="{'invisible': [('vehicle_type','=','2')]}" >
+                        <field name="employee_driver_id" string="Driver Internal" options="{'no_create_edit': True}"/>
+                    </group>
                 </group>
             </field>
         </record>
