--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -71,11 +71,9 @@
                              </h1>
                         </div>
                         <group>
-
                             <group>
                                 <field name="date_request"/>
                             </group>
-
                             <group coolspan="10">
                                 <field name="total_qty_pokok" string="Total Quantity Seed"/>
                             </group>
@@ -156,8 +154,8 @@
             <field name="arch" type="xml">
                 <tree string="Detail Transportir View" editable="bottom">
                     <field name="estate_vehicle_id" string="Code Vehicle" required="1"
-                           options="{'no_create_edit': True}"/>
-                    <field name="driver_estate_id" string="Driver" readonly="1">{‘readonly_by_pass’: True}</field>
+                           options="{'no_create_edit': True}" domain="['|',('vehicle_type','=',1),('vehicle_type','=',2)]"/>
+                    <field name="driver" string="Driver Vehicle" readonly="1">{‘readonly_by_pass’: True}</field>
                     <field name="no_vehicle" string="No Vehicle" readonly="1"/>
                     <field name="vehicle_type" string="Vehicle Type" readonly="1"/>
                 </tree>
@@ -278,8 +276,9 @@
                             <group>
                                 <field name="kebun_location_id" attrs="{'required': [('state','!=','draft')],
                                  'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
-
                                 <field name="divisi_location_id" attrs="{'required': [('state','!=','draft')],
+                                 'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
+                                <field name="employee_id" attrs="{'required': [('state','!=','draft')],
                                  'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                             </group>
 
