--- a/estate_nursery/reports/reportplantation_prenursery_div.xml
+++ b/estate_nursery/reports/reportplantation_prenursery_div.xml
@@ -8,7 +8,7 @@
                     <!--First Row-->
                         <div class="row col-xs-12" style="font-family: times; background-color:#568eff;border: 1px solid #568eff;color:#ffffff; font-size:20pt;">
                             <div class="col-xs-12" >
-                                <p>Report Pre Nursery</p>
+                                <p style="text-align:center;font-family: times;" >Report Pre Nursery</p>
                             </div>
                         </div>
 
