--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -8,7 +8,7 @@
             <field name="arch" type="xml">
                 <tree string="Request planting View"
                       colors="red:state=='draft';red:state=='confirmed';green:state=='done'">
-                    <field name="planting_code" string="Request No" />
+                    <field name="seeddo_code" string="Request No" />
                     <field name="date_request" string="Date Request"/>
                     <field name="total_qty_pokok" string="Total Quantity"/>
                     <field name="state" string="Status" invisible="0"/>
@@ -67,7 +67,7 @@
                                        attrs="{'invisible': [('state','not in',('draft','sent','bid'))]}"/>
                                 <label string="Seed Delivery Order For"
                                        attrs="{'invisible': [('state','in',('draft','sent','bid'))]}"/>
-                                    <field name="planting_code" class="oe_inline" readonly="1" />
+                                    <field name="seeddo_code" class="oe_inline" readonly="1" />
                              </h1>
                         </div>
                         <group>
@@ -169,7 +169,7 @@
             <field name="arch" type="xml">
                 <tree string="Activity Line View" editable="bottom">
                     <field name="activity_id" string="Activity"  options="{'no_create_edit': True}"/>
-                    <field name="product_type_id" string="Product UoM">{‘readonly_by_pass’: True}</field>
+                    <field name="product_type_id" string="Product UoM"/>
                     <field name="qty_product" string="Quantity" />
                     <field name="price" string="Price/product" required="1">{‘readonly_by_pass’: True}</field>
                     <field name="transportactivity_expense_id"/>
@@ -279,7 +279,7 @@
                                 <field name="divisi_location_id" attrs="{'required': [('state','!=','draft')],
                                  'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                                 <field name="employee_id" attrs="{'required': [('state','!=','draft')],
-                                 'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
+                                 'readonly': [('state','=','done')]}" string="To Employee" options="{'no_create_edit': True}"/>
                             </group>
 
                             <group coolspan="10">
@@ -318,16 +318,12 @@
             <field name="arch" type="xml">
                 <tree string="Request line View" colors="red:qty_request" editable="bottom">
                     <field name="inherit_location_id" string="Blok" options="{'no_create_edit': True}" />
-                    <field name="Luas" string="Luas(Ha)"/>
+                    <field name="large_area" string="Large(Ha)"/>
                     <field name="qty_request" string="&#931; Quantity Request ." sum="Qty"/>
                     <field name="comment"/>
                 </tree>
             </field>
         </record>
-
-
-
-
 
         <!--Action-->
         <record model="ir.actions.act_window" id="action_list_requestplanting" >
