--- a/estate_nursery/reports/reportplantation_culling.xml
+++ b/estate_nursery/reports/reportplantation_culling.xml
@@ -8,7 +8,7 @@
                     <!--First Row-->
                         <div class="row col-xs-12" style="font-family: times; background-color:#568eff;border: 1px solid #568eff;color:#ffffff; font-size:20pt;">
                             <div class="col-xs-12" >
-                                <p>Report Berita Acara Pemusnahan Bibit</p>
+                                <p style="text-align:center;font-family: times;">Report Berita Acara Pemusnahan Bibit</p>
                             </div>
                         </div>
 
@@ -42,48 +42,21 @@
 
                         <!-- Third ROW -->
                         <div class="row col-xs-12" style="background-color:#568eff;border: 1px solid #568eff;color:#ffffff;">
-                            <div class="col-xs-1">
-                                <table>
-                                    <tr>
-                                        <td><p style="font-family: times; font-size:15pt;">Batch No </p></td>
-                                    </tr>
-                                </table></div>
-                            <div class="col-xs-1">
-                                <table>
-                                    <tr>
-                                        <td><p style="font-family: times; font-size:15pt;">Seed DO</p></td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="col-xs-1">
-                                <table>
-                                    <tr>
-                                        <td><p style="font-family: times; font-size:15pt;">QTY Abnormal Batch</p></td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="col-xs-1">
-                                <table>
-                                    <tr>
-                                        <td><p style="font-family: times; font-size:15pt;">QTY Normal Batch</p></td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="col-xs-1">
+                            <div class="col-xs-2">
                                 <table>
                                     <tr>
                                         <td><p style="font-family: times; font-size:15pt;">Selection Stage</p></td>
                                     </tr>
                                 </table>
                             </div>
-                            <div class="col-xs-1">
+                            <div class="col-xs-2">
                                 <table>
                                     <tr>
                                         <td><p style="font-family: times; font-size:15pt;">QTY Abnormal Selection</p></td>
                                     </tr>
                                 </table>
                             </div>
-                            <div class="col-xs-1">
+                            <div class="col-xs-2">
                                 <table>
                                     <tr>
                                         <td><p style="font-family: times; font-size:15pt;">QTY Normal Selection</p></td>
@@ -97,14 +70,14 @@
                                     </tr>
                                 </table>
                             </div>
-                            <div class="col-xs-1">
+                            <div class="col-xs-2">
                                 <table>
                                     <tr>
                                         <td><p style="font-family: times; font-size:15pt;">Total  Abnormal </p></td>
                                     </tr>
                                 </table>
                             </div>
-                            <div class="col-xs-1">
+                            <div class="col-xs-2">
                                 <table>
                                     <tr>
                                         <td><p style="font-family: times; font-size:15pt;">Total  Transplanted </p></td>
@@ -117,43 +90,7 @@
                       <div class="row col-xs-12" style="border: 1px solid #568eff;">
                           <t t-foreach="o.cullinglineall_ids"  t-as="i">
                                 <div class="col-xs-12">
-                                    <div class="col-xs-1">
-                                        <div>
-                                            <table>
-                                                <tr>
-                                                    <td><p t-esc="i.batch_id.name" style="text-align:left;font-family: times; font-size:14pt;"/></td>
-                                                </tr>
-                                            </table>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-1" style="text-align:right;border-left:1px solid #568eff;">
-                                        <div>
-                                            <table>
-                                                <tr>
-                                                    <td><p t-esc="i.total_seed_dobatch" style="text-align:right;font-family: times; font-size:14pt;"/></td>
-                                                </tr>
-                                            </table>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-1" style="text-align:right;border-left:1px solid #568eff;">
-                                        <div>
-                                            <table>
-                                                <tr>
-                                                    <td><p t-esc="i.allqty_abnormal_batch" style="text-align:right;font-family: times; font-size:14pt;"/></td>
-                                                </tr>
-                                            </table>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-1" style="text-align:right;border-left:1px solid #568eff;">
-                                        <div>
-                                            <table>
-                                                <tr>
-                                                    <td><p t-esc="i.allqty_normal_batch" style="text-align:right;font-family: times; font-size:14pt;"/></td>
-                                                </tr>
-                                            </table>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-1" style="text-align:center;border-left:1px solid #568eff;">
+                                    <div class="col-xs-2" style="text-align:center;border-left:1px solid #568eff;">
                                          <div>
                                             <table>
                                                 <tr>
@@ -162,7 +99,7 @@
                                             </table>
                                         </div>
                                     </div>
-                                    <div class="col-xs-1" style="text-align:right;border-left:1px solid #568eff;">
+                                    <div class="col-xs-2" style="text-align:right;border-left:1px solid #568eff;">
                                         <div>
                                             <table>
                                                 <tr>
@@ -171,7 +108,7 @@
                                             </table>
                                         </div>
                                     </div>
-                                    <div class="col-xs-1" style="text-align:right;border-left:1px solid #568eff;">
+                                    <div class="col-xs-2" style="text-align:right;border-left:1px solid #568eff;">
                                         <div>
                                             <table>
                                                 <tr>
@@ -189,7 +126,7 @@
                                             </table>
                                         </div>
                                     </div>
-                                    <div class="col-xs-1" style="text-align:right;border-left:1px solid #568eff;">
+                                    <div class="col-xs-2" style="text-align:right;border-left:1px solid #568eff;">
                                         <div>
                                             <table>
                                                 <tr>
@@ -198,7 +135,7 @@
                                             </table>
                                         </div>
                                     </div>
-                                    <div class="col-xs-1" style="text-align:right;border-left:1px solid #568eff;">
+                                    <div class="col-xs-2" style="text-align:right;border-left:1px solid #568eff;">
                                         <div>
                                             <table>
                                                 <tr>
