--- a/estate_nursery/reports/reportplantation_seedreceived_bag.xml
+++ b/estate_nursery/reports/reportplantation_seedreceived_bag.xml
@@ -7,26 +7,47 @@
             <t t-call="report.external_layout">
                 <div class="page">
                     <!--First Row-->
-                        <div class="row col-xs-12">
-                            <div class="col-xs-12" style="background-color:#568eff;border: 1px solid #568eff;color:#ffffff;">
-                                <p style="text-align:center;font-family: times;">Report Seed Received Bag</p>
+                        <div class="row col-xs-12" style="font-family: times; background-color:#568eff;border: 1px solid #568eff;color:#ffffff; font-size:20pt;">
+                            <div class="col-xs-12" >
+                                <p style="text-align:center;font-family: times;" >Report Seed Received Bag</p>
                             </div>
                         </div>
 
                     <!-- SECOND ROW -->
-                        <div class="row col-xs-12">
-                                <h4>Report Detail Bag</h4><br/>
-                                <div class="col-xs-12">
-                                    <div t-field="o.name" class="row " >
-                                    </div>
-                                    <div t-field="o.date_received" class="row ">
-                                    </div>
-                                    <div t-field="o.date_planted" class="row ">
-                                    </div>
+                         <div class="row col-xs-12" style="font-family: times;border: 1px solid #568eff;color:black; font-size:12pt;">
+                                <div class="col-xs-12" >
+                                    <b style="text-align:left;font-family: times;" >Report Detail Bag</b>
                                 </div>
+                         </div>
+
+                        <div class="row col-xs-12" style="background-color:#568eff;border: 1px solid #568eff;color:#ffffff;">
+                                     <table class="table table-condensed">
+                                        <thead style="background-color:#568eff;border: 1px solid #568eff;color:#ffffff;">
+                                            <tr>
+                                                <th style="width:33.3%;">Batch Name :</th>
+                                                <th style="width:33.3%;">Date Received :</th>
+                                                <th style="width:33.3%;">Date Planted :</th>
+                                            </tr>
+                                        </thead>
+
+                                        <tbody class="selection_tbody" style="border: 1px solid #568eff;">
+                                            <tr style="font-family: times; font-size:8pt;">
+                                                <td style="width:33.3%;"><span t-field="o.name"/></td>
+                                                <td style="width:33.3%;"><span t-field="o.date_received"/></td>
+                                                <td style="width:33.3%;"><span t-field="o.date_planted"/></td>
+                                            </tr>
+                                        </tbody>
+
+                                     </table>
                         </div>
 
                         <!-- Third ROW -->
+                        <div class="row col-xs-12" style="font-family: times;border: 1px solid #568eff;color:black; font-size:12pt;">
+                                <div class="col-xs-12" >
+                                    <b style="text-align:left;font-family: times;" > Bag Information</b>
+                                </div>
+                        </div>
+
                         <div class="row col-xs-12" style="background-color:#568eff;border: 1px solid #568eff;color:#ffffff;">
                             <div class="col-xs-1">Variety</div>
                             <div class="col-xs-1">No Box/bag</div>
@@ -62,7 +83,7 @@
                                 <span t-field="o.variety_id.name"/>
                             </div>
                             <div class="col-xs-1">
-                                <t t-foreach="o.batchline_ids" t-as="l">
+                                <t height="43" t-foreach="o.batchline_ids" t-as="l">
                                     <t t-if="l.flag_bag == 1 ">
                                         <div t-field="l.name"></div>
                                     </t>
@@ -75,35 +96,35 @@
                                 <span t-field="o.qty_received"/>
                             </div>
                                 <div class="col-xs-8">
-                                    <t t-foreach="o.batchline_ids" t-as="l">
-                                    <t t-foreach="l.child_ids" t-as="k">
+                                    <t height="43" t-foreach="o.batchline_ids" t-as="l">
+                                    <t height="43" t-foreach="l.child_ids" t-as="k">
                                     <div class="col-xs-12">
                                         <div class="col-xs-5">
                                             <div class="col-xs-12">
                                                 <t t-if="k.flag_bag == 1 ">
                                                     <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">
                                                         <t t-if="k.child_ids.qty_broken >= 0">
-                                                            <span t-field="k.qty_broken"/>
+                                                            <span height="43" t-field="k.qty_broken"/>
                                                         </t>
                                                     </div>
                                                     <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">
                                                         <t t-if="k.child_ids.qty_dead >= 0">
-                                                            <span t-field="k.qty_dead"/>
+                                                            <span height="43" t-field="k.qty_dead"/>
                                                         </t>
                                                     </div>
                                                     <div class="col-xs-2" style="text-align:center; border-left:1px solid #568eff;">
                                                         <t t-if="k.child_ids.qty_fungus >= 0">
-                                                            <span t-field="k.qty_fungus"/>
+                                                            <span height="43" t-field="k.qty_fungus"/>
                                                         </t>
                                                     </div>
                                                     <div class="col-xs-3" style="text-align:center; border-left:1px solid #568eff;">
                                                         <t t-if="k.child_ids.subtotal_abnormal >= 0">
-                                                            <span t-field="k.subtotal_abnormal"/>
+                                                            <span height="43" t-field="k.subtotal_abnormal"/>
                                                         </t>
                                                     </div>
                                                     <div class="col-xs-3" style="text-align:center; border-left:1px solid #568eff;">
                                                         <t t-if="k.child_ids.percentage_abnormal >= 0">
-                                                            <span t-field="k.percentage_abnormal"/>
+                                                            <span height="43" t-field="k.percentage_abnormal"/>
                                                         </t>
                                                     </div>
                                                 </t>
@@ -114,29 +135,29 @@
                                                 <t t-if="k.flag_bag == 1 ">
                                                     <div class="col-xs-3" style="text-align:center; border-left:1px solid #568eff;">
                                                         <t t-if="k.child_ids.qty_single >= 0">
-                                                            <span t-field="k.qty_single"/>
+                                                            <span height="43" t-field="k.qty_single"/>
                                                         </t>
                                                     </div>
                                                     <div class="col-xs-3" style="text-align:center; border-left:1px solid #568eff;">
                                                         <t t-if="k.child_ids.qty_double >= 0">
-                                                            <span t-field="k.qty_double"/>
+                                                            <span height="43" t-field="k.qty_double"/>
                                                         </t>
                                                     </div>
                                                     <div class="col-xs-3" style="text-align:center; border-left:1px solid #568eff;">
                                                         <t t-if="k.child_ids.subtotal_normal >= 0">
-                                                            <span t-field="k.subtotal_normal"/>
+                                                            <span height="43" t-field="k.subtotal_normal"/>
                                                         </t>
                                                     </div>
                                                     <div class="col-xs-3" style="text-align:center; border-left:1px solid #568eff;">
                                                         <t t-if="k.child_ids.percentage_normal >= 0">
-                                                            <span t-field="k.percentage_normal"/>
+                                                            <span height="43" t-field="k.percentage_normal"/>
                                                         </t>
                                                     </div>
                                                 </t>
                                             </div>
                                         </div>
                                         <div class="col-xs-2" style="text-align:center;">
-                                            <span t-field="k.qty_planted"/>
+                                            <span height="43" t-field="k.qty_planted"/>
                                         </div>
                                     </div>
                                     </t>
